refactor API for idomatic RESTful design
