# lapstream_server/src/routes/lane.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from "express";
+import { setLanePlayerController } from "../controllers/lane.controller.js";
+import { reqRole } from "../middleware/requireRole.js";
 
 
-export const receptionRouter = Router();
+export const laneRouter = Router();
 
-
-
+laneRouter.put('/:paceGroup/:position/player', reqRole('lane_assign'), setLanePlayerController)
