# lapstream_server/src/routes/player.routes.ts
@@ -3,9 +3,8 @@ import { reqRole } from "../middleware/requireRole.js";
 import {
     newPlayerController,
     removePlayerFromSlotController,
-    assignPlayerToSlotController,
     getPlayerController
-} from "../controllers/playerAdmin.controller.js";
+} from "../controllers/player.controller.js";
 
 /**
  * The player API contains CRUD methods for creating and managing players
@@ -13,11 +12,10 @@ import {
 
 export const playerRouter = Router();
 
-playerRouter.put('/assign', reqRole('lane_assign'), assignPlayerToSlotController);
-playerRouter.post('/new', reqRole('reception'), newPlayerController)
+playerRouter.post('/', reqRole('reception'), newPlayerController)
 
 // filter by id is optional on GET /player/
 playerRouter.get('/{:id}', reqRole('reception'), getPlayerController)
 //playerRouter.get('/', reqRole('reception'), getPlayerController)
 
-playerRouter.delete('/:id', reqRole('reception'), removePlayerFromSlotController);
+playerRouter.delete('/lane/:id', reqRole('reception'), removePlayerFromSlotController);
